Updated framework for new logo and footer.

--- a/framework/assets/css/bootstrap.css
+++ b/framework/assets/css/bootstrap.css
@@ -2509,7 +2509,7 @@ button.close {
   right: 0;
 }
 .navbar-inverse {
-  background-color: #222222;
+  background-color: #ad1f2f;
 }
 .navbar-inverse .navbar-brand {
   color: #999999;
