--- a/framework/_includes/footer.html
+++ b/framework/_includes/footer.html
@@ -1,24 +1,23 @@
-
 </div>
-
-    </div>  <!-- /inner-wrapper -->
-            </div>  <!-- /row -->
-        </div>  <!-- /container -->
-
-    </div>  <!-- /segment-content -->
+</div>  <!-- /inner-wrapper -->
+</div>  <!-- /row -->
+</div>  <!-- /container -->
+</div>  <!-- /segment-content -->
 
 <!--status-bar-->
 
 <div id="segment-footer" class="segment" igtool="footer">  <!-- segment-footer -->
   <div class="container">  <!-- container -->
-   <div class="inner-wrapper">
-    <p>
-      {{site.data.fhir.igName}} Version: {{ site.data.fhir.ig.version }}  &reg;&copy; <a style="color: #81BEF7" href="{{ site.data.fhir.path }}">FHIR Version: {{ site.data.fhir.version }}</a> (IG Publisher v{{site.data.fhir.versionFull}}) generated on {{site.data.fhir.genDate}}.
-      | <a style="color: #81BEF7" href="https://jira.hl7.org/projects/FHIR">Propose a change</a>
-        <a style="color: #81BEF7" rel="license" href="{{site.data.fhir.path}}license.html"><img style="border-style: none;" alt="CC0" src="cc0.png"/></a>
-        </span>
-        </p>
-   </div>  <!-- /inner-wrapper -->
+	<div class="inner-wrapper" style="font-size:12px">
+	    <p>
+	     &copy; 2019+ <a href="http://www.hl7.org/Special/committees/medication/index.cfm">HL7 International - Pharmacy Work Group</a>. Package hl7.fhir.us.carin-bb#0.1.60 based on <a style="color: #81BEF7" href="http://hl7.org/fhir/R4/index.html">FHIR 4.0.1</a> created <span href="#" data-toggle="tooltip" data-placement="top" title="" data-original-title="Wed, Dec 18, 2019 16:56-0600">2019-12-18</span>. <br>
+	      Links: <a style="color: #81BEF7" href="toc.html">Table of Contents</a>
+	      | <a style="color: #81BEF7" href="qa.html">QA Report</a>
+	      | <a style="color: #81BEF7" href="http://hl7.org/fhir/us/carin-bb/history.html">Version History</a>
+	      | <a style="color: #81BEF7" rel="license" href="http://hl7.org/fhir/R4/license.html"><img style="border-style: none;" alt="CC0" src="cc0.png"></a>
+	      | <a style="color: #81BEF7" href="http://hl7.org/fhir-issues" target="_blank">Propose a change</a>
+	    </p>
+	</div>
   </div>  <!-- /container -->
  </div>  <!-- /segment-footer -->
   <!-- disqus thread -->
