--- a/framework/_includes/header.html
+++ b/framework/_includes/header.html
@@ -38,32 +38,35 @@
 <body markdown="1">
 <?xml version="1.0" encoding="UTF-8"?>
 <div id="segment-header" class="segment">
-  <!-- segment-header -->
-  <div class="container"><!-- container -->
+   <div class="container" style="background:white">
+        <div id="hl7-nav" style="line-height:50px; float:left; margin-top:16px; color:#808080;">
+          <a id="hl7-logo" no-external="true" href="http://hl7.org" style="float:left; margin-left:6px;">
+            <img height="50" alt="Visit the HL7 website" src="{{site.data.info.assets}}assets/images/hl7-logo-header.png"/>
+          </a>
+        </div>
+        <div id="fhir-nav" style="line-height: 50px;float:right; margin-top:16px; color:#808080;">
+          <a id="fhir-logo" no-external="true" href="http://hl7.org/fhir" style="float: right; margin-left: 6px;">
+		<img height="50" alt="Visit the FHIR website" src="{{site.data.info.assets}}assets/images/fhir-logo-www.png"/> </a>
+        </div>
+        <div id="hl7-search" style="line-height: 50px; float: right; margin-top: 16px; color: maroon;">
+          <a id="hl7-search-lnk" no-external="true" href="http://hl7.org/fhir/search.cfm"><img alt="Search FHIR" src="{{site.data.info.assets}}assets/images/search.png"/></a>
+        </div>
 
-    <!-- hl7 logo -->
-    <a no-external="true" href="http://hl7.org/fhir">
-      <img alt="FHIR Homepage" class="img-responsive logo" src="assets/images/fhir-logo-www.png"/>
-    </a>
-    <!-- end hl7 logo -->
+	<div id="ig-status" style="color:maroon; height:86px; text-align:center; padding-top:25px">
+          <p>
+		<span style="font-size:12pt;font-weight:bold">
+			{{site.data.fhir.ig.title}}
+		</span>
+		<br>
+		{% if {{site.data.fhir.ig.status}} == 'draft' %}
+		- CI Build
+	        {% else %}
+		- Release {{site.data.fhir.ig.version}}
+	        {% endif %}	
+	  </p>
+        </div>
+   </div>
 
-
-    <!-- org logo -->
-    {% include logo.md %}
-    <!-- end org logo -->
-
-
-    <div id="project-status" class="project-status"> <!-- ig title text -->
-
-      {% if {{site.data.fhir.ig.status}} == 'draft' %}
-      <strong>{{site.data.fhir.ig.title}} Implementation Guide CI Build</strong>
-      {% else %}
-      <strong>{{site.data.fhir.ig.title}} Implementation Guide Release {{site.data.fhir.ig.version}}</strong>
-      {% endif %}
-
-    </div><!-- end ig title text -->
-
-  </div><!-- end container -->
   <div class="container">
     <!-- container -->
   </div>
