--- a/framework/assets/css/bootstrap-fhir.css
+++ b/framework/assets/css/bootstrap-fhir.css
@@ -2533,7 +2533,7 @@ button.close {
   right: 0;
 }
 .navbar-inverse {
-  background-color: #707070;
+  background-color: #ad1f2f;
 }
 .navbar-inverse .navbar-brand {
   color: #e6e6e6;
